fixed gap on top of edit icon on row

--- a/assets/css/scss/_admin.scss
+++ b/assets/css/scss/_admin.scss
@@ -529,6 +529,7 @@ body {
 						letter-spacing: 1px;
 						font-weight: 600;
 						text-transform: uppercase;
+						vertical-align: top;
 
 						span {
 
